# otus-hw-01-ci-cd

./: CMakeLists.txt  README.md
.github/workflows/: release.yml
include/hello/: hello.h
include/lib/: lib.h
lib/: CMakeLists.txt  lib.cpp  version.h  version.h.in
src/: CMakeLists.txt  hello.cpp
tests/: CMakeLists.txt  test.cpp
